cargo-features = ["strip"]

[package]
name = "rstationhub"
version = "0.1.0"
edition = "2018"
description = "Unofficial game launcher for UnityStation"
homepage = "https://github.com/Fogapod/rstationhub"
repository = "https://github.com/Fogapod/rstationhub"
license = "MIT"


[features]
default = ["rustls", "geolocation"]

rustls = ["reqwest/rustls-tls"]

native-tls = ["reqwest/native-tls"]

# cannot be disablet now
geolocation = []

[dependencies]
serde_json = "1"
crossterm = "0.21"
better-panic = "0.2.0"
dirs-next = "2.0.0"
async-trait = "0.1.51"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "sync"]

[dependencies.futures]
version = "0.3.16"
default-features = false

[dependencies.tui]
version = "0.16.0"
default-features = false
features = ["crossterm"]

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["std", "derive", "cargo", "env", "suggestions"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = ["json", "stream"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.simple-logging]
version = "2.0.2"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true
